Fix spacing issues with code styling

--- a/_src/_includes/css/style.css
+++ b/_src/_includes/css/style.css
@@ -192,6 +192,7 @@ blockquote cite {
 
 pre {
   border: 0.0625em dashed currentColor;
+  border-radius: 0.3em;
   font-family: "Source Code VF", Consolas, "Andale Mono WT", "Andale Mono",
     "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono",
     "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco,
@@ -200,8 +201,10 @@ pre {
   font-size: 1.125rem;
   line-height: 1.2;
   line-height: var(--line-height-small);
+  margin: 0.4em 0;
   max-width: 100%;
   overflow: auto;
+  padding: 1em;
   white-space: pre-wrap;
 }
 
@@ -619,7 +622,7 @@ pre[class*="language-"] {
   word-spacing: normal;
   word-break: normal;
   word-wrap: normal;
-  line-height: 1.5;
+  line-height: 1.2;
 
   -moz-tab-size: 4;
   -o-tab-size: 4;
@@ -634,7 +637,7 @@ pre[class*="language-"] {
 /* Code blocks */
 pre[class*="language-"] {
   padding: 1em;
-  margin: 0.5em 0;
+  margin: 0.4em 0;
   overflow: auto;
   border-radius: 0.3em;
 }
